<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="#ffffff"
    android:descendantFocusability="blocksDescendants"
    >
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    <ImageView
        android:id="@+id/lv_dingdan_tupian"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/djqmy"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="14dp"
        />
<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="预约时间："
            />

        <TextView
            android:id="@+id/tv_dingdan_listview_shijian"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_marginLeft="5dp"
            android:text="@string/tv_dingdan_listview_shijian"
            />

        <!--<TextView-->
            <!--android:id="@+id/tv_dingdan_listview_zhuangtai"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:text="@string/tv_dingdan_listview_dingdanzhuangtai"-->
            <!--android:layout_marginRight="20dp"-->
            <!--android:textSize="16sp"-->
            <!--/>-->
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/tv_dingdan_listview_fuwucheliang"
            />

        <TextView
            android:id="@+id/tv_dingdan_listview_fuwucheliang"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_marginLeft="5dp"
            android:text="@string/tv_dingdan_listview_chepaihao"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/tv_dingdan_listview_fuwuxiangmu"
            />

        <TextView
            android:id="@+id/tv_dingdan_listview_fuwuxiangmu"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_marginLeft="5dp"
            android:text="@string/tv_dingdan_listview_xiangmu"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/tv_dingdan_listview_dingdanjiage"
            />

        <TextView
            android:id="@+id/tv_dingdan_listview_dingdanjiage"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_marginLeft="5dp"
            android:text="@string/tv_dingdan_listview_jiage"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:text="扣代金券："
            android:textSize="16sp"
           />
            <TextView
                android:id="@+id/tv_dingdan_daijinquan"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="5dp"
                />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:text="实际支付："
            android:textSize="16sp"
            />
            <TextView
                android:id="@+id/tv_dangqiandingdan_listview_heji"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="5dp"
                />
            <TextView
                android:id="@+id/tv_fuwufei"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:layout_marginLeft="5dp"
                />


    </LinearLayout>
    <LinearLayout
        android:id="@+id/ll_zhuangtai"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:text="订单状态："
            android:textSize="16sp"
            />
        <TextView
            android:id="@+id/tv_dingdan_zhuangtai"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="5dp"
            />
    </LinearLayout>
</LinearLayout>

</LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp">

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/btn_dingdan_listview_zailaiyidan"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:textSize="16sp"
            android:text="@string/btn_dingdan_listview_zailaiyidan"
            android:layout_marginRight="10dp"
            android:textColor="@color/titlebg"
            android:background="@drawable/btn_blue_bg"
            />

        <Button
            android:id="@+id/btn_dingdan_listview_qupingjia"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:textSize="16sp"
            android:text="@string/btn_dingdan_listview_qupingjia"
            android:layout_marginRight="10dp"
            android:textColor="@android:color/holo_red_light"
            android:background="@drawable/btn_red_bg"
            />
    </LinearLayout>
</LinearLayout>